feature: add get debit card by id endpoint
